xx yyy zzzz: 0.4.0 Miek <miek@miek.nl>
  -- major new release, scripts are dropped --
  * todo: rdup-restore in the same line as rdup-simple
  * todo: rdup-mirror in the same line as rdup-simple
  * todo: rdup-snapshot
  * All paths have changed /usr/bin is now used, no more sbin
  * All manual pages now fall in the section 1, not 8
  * Major rewrite of rdup-restore


09 May 2007: 0.3.9 Miek <miek@miek.nl>
  -- new features and fixes --
   * Add -S and -D to the known options of rdup-restore (reported by 
     Ben Coffey)
   * Add runtime check to find mcrypt to rdup-crypt (reported by Ben
     Coffey)
   * Add runtime checks to rdup-gzip and rdup-gpg too
   * Documentation updates and tweaks
   * Added rdup-simple; 
   	- other calling semantics
	- uses ~/.rdup for storing files
   * Added rdup-gpg - encrypt with gpg, decryption makes use of
     gpg-agent, otherwise you need to type your passphrase for 
     every file
   * Force ordering of encryption and compressions. First compress
     then encrypt; all scripts do this now. 
   * Force ordering of decryption and decompression: First decrypt
     then decompress.
     

14 Mar 2007: 0.3.8 Miek <miek@miek.nl>
  -- bugfixes --
   * NOTE: -n changed semantics!
   * Add 'E:' to the known options in rdup-dump.in
   * Fix the +NUMBER argument in rdup-snapshot (reported by Joerg Rueppel)
   * Fix usage of -z (and any other option that toggles rdup's -c option)
     (thanks to J.W. Janssen for reporting)
   * Use -f in rdup-gzip (bug reported by David Martin)
   * Fix a bug in rdup-crypt (reported by David Martin)
   * Use 'warn' in rdup-gzip/crypt, echo a warning and continue
     when files fail to zip or crypt.
   * rdup-dump, rdup-snapshot: -n path, changed semantics. If is
     now a path prefix in stead of a file prefix
   * documentation updates in the manpages of rdup-dump and
     rdup-snapshot
   * add -l to rdup-dump, rdup-snapshot for an optional lockfile dir


11 Feb 2007: 0.3.7 Miek <miek@miek.nl>